# RobotServer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LLMPetDetectionWorker.h  README.md  main.cpp
.cache/clangd/index/: PetDetectionWorker.cpp.D24E834B30D7CCF1.idx  PetDetectionWorker.h.8EFC0A395CD9488E.idx  RemoteWebcamProviderWorker.cpp.61F79D72C50713F5.idx  RemoteWebcamProviderWorker.h.09AFBF3579918B95.idx  SDLWorker.cpp.4F5C0D53A60568C2.idx  SDLWorker.h.F9BF7DF3D4468CE2.idx  SensorDataDispatcher.cpp.FC8153846AA9AE36.idx  SensorDataDispatcher.h.C2238D68459466D3.idx  SensorDataDispatcherInterface.h.C522F9512CD622C8.idx  SensorDataDispatcherTest.cpp.908F3B212A07DA52.idx  SensorDataProcessorMock.cpp.8A52E45E385D513C.idx  SensorDataProcessorMock.h.7284D0D1C2E792A9.idx  SensorDataWorkerInterface.h.863C1811C40B9F22.idx  SimulatedWebcamSender.cpp.F84ACE779F6F2EA6.idx  SimulatedWebcamSender.h.82075253A755F8D9.idx  StreamProcessor.cpp.4F49C71D94D93CDF.idx  StreamProcessor.h.A574ECF6BDD7DE06.idx  UserInputProcessorWorker.cpp.4C24FB4D9DE6280B.idx  UserInputProcessorWorker.h.8F3EC3C6759E38E9.idx  WorkerInterface.h.5FF5FEB13B561F9E.idx  WorkerManager.cpp.E514D90097F7F448.idx  WorkerManager.h.A123C705984EE172.idx  YoloPetDetectionWorker.cpp.1FC9735638728611.idx  YoloPetDetectionWorker.h.1C88D987A72981C9.idx  affine.hpp.FB285B0FE2078C01.idx  all_indices.h.722E9E59EB75AAD1.idx  allocator.h.1C7C2C7F1EAA9976.idx  any.h.C5F6CFFC8E1C5CF8.idx  aruco_board.hpp.51609E9FFA56E14B.idx  aruco_detector.hpp.84884504FD21829B.idx  aruco_dictionary.hpp.46A62BCDD4F97CC2.idx  async.hpp.97A826B790E008BA.idx  autotuned_index.h.781C9D9A8378D1B5.idx  background_segm.hpp.1AB25DD92533A3AF.idx  barcode.hpp.52195C228E96ADB3.idx  base.hpp.A8C3EFCADFFACBD7.idx  blenders.hpp.EC4B9EACDC286AF5.idx  bufferpool.hpp.43326B8B75917C78.idx  calib3d.hpp.8281B7399F2D990B.idx  camera.hpp.2F2E200F24DE49E6.idx  (+149 more)
.devcontainer/: Dockerfile  devcontainer.json
sensor_data_processors/: CMakeLists.txt  LLMPetDetectionWorker.cpp  LLMPetDetectionWorker.h  PetDetectionWorker.cpp  PetDetectionWorker.h  RemoteWebcamProvider.cpp  RemoteWebcamProvider.h  RemoteWebcamProviderWorker.cpp  RemoteWebcamProviderWorker.h  RobotControlWorker.cpp  RobotControlWorker.h  SDLWorker.cpp  SDLWorker.h  SavedDogFrames.h  SensorDataDispatcher.cpp  SensorDataDispatcher.h  SensorDataDispatcherInterface.h  SensorDataManager.cpp  SensorDataManager.h  SensorDataProcessorInterface.h  SensorDataProcessorMock.cpp  SensorDataProcessorMock.h  SensorDataProcessorsInterface.h  SensorDataProviderInterface.cpp  SensorDataProviderInterface.h  SensorDataWorkerInterface.h  SimulatedWebcamSender.cpp  SimulatedWebcamSender.h  StreamProcessor.cpp  StreamProcessor.h  UserInputProcessor.cpp  UserInputProcessor.h  UserInputProcessorWorker.cpp  UserInputProcessorWorker.h  UserInputProvider.cpp  UserInputProvider.h  WorkerInterface.h  WorkerManager.cpp  WorkerManager.h  YoloPetDetectionWorker.cpp  (+1 more)
sensor_data_processors/tests/: CMakeLists.txt  SensorDataDispatcherTest.cpp
